--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -20,7 +20,7 @@
             <div class="card mb-2">
                 <div class="card-body text-left">
                     <div class="row col-12">
-                        <h5 class="card-title "><%=post.author.username  %> </h5>
+                        <a href="/profile/<%=post.author.id %>"><h5 class="card-title"><%=post.author.username  %> </h5></a>
                         <small class="text-muted ml-auto"><%=post.created.toDateString() %> </small>
                         <% if (currentUser && post.author.id.equals(currentUser._id)) {%>
                         <div class="dropdown">
@@ -66,7 +66,7 @@
                     <div class="collapse" id="post<%=post._id  %>">
                         <% if (post.comments.length==0){ %> 
                             <div class="card-body comment_section">
-                                <p class="card-text text-center text-dark">No comments yet :(</p>
+                                <p class="card-text text-center text-muted">No comments yet</p>
                             </div>
                         <% } else { %> 
                         <div class="card-body comment_section">
