--- a/views/friends/index.ejs
+++ b/views/friends/index.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header') %>
 <div class="container col-lg-8">
     <div class=" mb-2">
-        <div class="card p-2">
+        <div class="card">
             <h5 class="card-header text-left" style="background-color: #fff;">Friend Requests</h5>
             <div class="card-body">
                 <div class="card-body">
@@ -43,7 +43,7 @@
         </div>
     </div>
     <div class="mb-2">
-        <div class="card p-2">
+        <div class="card">
             <h5 class="card-header text-left" style="background-color: #fff;">People You May know</h5>
             <div class="card-body">
                 <%  users.forEach((user)=>{  %>
@@ -81,7 +81,7 @@
         </div>
     </div>
 
-    <div class=" mb-2">
+    <div class="mb-2">
         <div class="card">
             <h5 class="card-header text-left" style="background-color: #fff;">Friends</h5>
             <div class="card-body">
