--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,7 +14,7 @@ maximum-scale=1.0, user-scalable=no" />
 <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light mb-2">
         <div class="container">
-            <a class="navbar-brand " href="/posts"><img height="50px" src="/assets/facebook.png"></a>
+            <a class="navbar-brand text-white font-weight-bold" href="/posts">Fakebook</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
