--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -9,7 +9,10 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
 </script>
-<script src="/js/main.js"></script>
+
+<!-- <script defer src="/socket.io/socket.io.js"></script> -->
+<script  src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.5/socket.io.min.js"></script>
+<script  src="/js/main.js"></script>
 </body>
 
 </html>
