--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -43,6 +43,11 @@ maximum-scale=1.0, user-scalable=no" />
                             title="Find Friends">
                             Find Friends</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link icons" href="/chats" data-toggle="tooltip" data-placement="bottom"
+                            title="Global Chat">
+                            Global Chat</a>
+                    </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
