--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -111,7 +111,7 @@
                             <div class="dropdown">
                                 <a class="no_outline" href="#" role="button" id="dropdownMenuLink"
                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <img src="/assets/ellipsis.png" height="20px">
+                                    <img src="/assets/images/ellipsis.png" height="20px">
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                                     <a href="/posts/<%=post._id  %>/edit" class="dropdown-item text-left">Edit</a>
@@ -134,12 +134,12 @@
                             <form action="/posts/<%=post._id%>/like?_method=PUT" method="POST">
                                 <% if (post.likes.find(o => o==currentUser._id)){ %>
                                 <button type="submit" class="no_outline" type="button">
-                                    <img src="/assets/like-1.png" height="20px"><span
+                                    <img src="/assets/images/like-1.png" height="20px"><span
                                         class="ml-1"><%=post.likes.length  %></span>
                                 </button>
                                 <% } else{ %>
                                 <button type="submit" class="no_outline" type="button">
-                                    <img src="/assets/like.png" height="20px"><span
+                                    <img src="/assets/images/like.png" height="20px"><span
                                         class="ml-1"><%=post.likes.length  %></span>
                                 </button>
                                 <% } %>
@@ -167,7 +167,7 @@
                                     <div class="dropdown ml-auto">
                                         <a class="no_outline" href="#" role="button" id="dropdownMenuLink"
                                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            <img src="/assets/ellipsis.png" height="20px">
+                                            <img src="/assets/images/ellipsis.png" height="20px">
                                         </a>
                                         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                                             <a href="/posts/<%=post._id%>/comments/<%=comment._id %>/edit"
